# ETH-contract-reviewer

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  schema.graphql  subgraph.yaml  substreams.yaml  tsconfig.json
eth-contract-reviewer/: package.json  subgraph.yaml
proto/contract/v1/: contract.proto  events.proto
scripts/: package-substreams.sh
src/: lib.rs  mappings.ts
src/pb/contract/v1/: mod.rs
