[package]
name = "contract_reviewer"
version = "0.1.0"
edition = "2021"

[lib]
name = "contract_reviewer"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5.0"
substreams-ethereum = "0.9.0"
substreams-entity-change = "1.3.0"
prost = "0.11.0"
hex = "0.4.3"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
